<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="160dp">
        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/regist_bg"
            android:scaleType="centerCrop"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/image_back"
            android:padding="10dp"
            android:src="@drawable/navigationbarback" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/zheci_backgournd"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/et_nickname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/zhuce_et_round"
            android:hint="@string/zhuce_name"
            android:textColorHint="#999999"
            android:padding="10dp" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/zhuce_et_round"
            android:textColorHint="#999999"
            android:hint="@string/zhuce_phonenumber"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_code"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:layout_weight="2"
                android:background="@drawable/zhuce_et_round"
                android:hint="@string/zhuce_yanzhengma"
                android:textColorHint="#999999"
                android:padding="10dp" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:textColor="#fff"
                android:background="@drawable/select_btn_blue_round"
                android:padding="10dp"
                android:text="@string/zhuce_huoquyanzhengma" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/zhuce_et_round"
            android:hint="@string/zhuce_password"
            android:inputType="textPassword"
            android:textColorHint="#999999"
            android:padding="10dp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#fff"
            android:background="@drawable/click_btn_blue_round"
            android:text="@string/zhuce_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ll_service_protocal"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:textColor="#C8C8C8"
                android:text="@string/zhuce_hint" />

            <TextView
                android:id="@+id/tv_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zhuce_hints"
                android:textColor="#151515" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
