<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcomebackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/welcomeyuan" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/denglu_et_round"
            android:hint="@string/denglu_phonenumber"
            android:padding="10dp"
            android:text="13120362645"
            android:textColor="#fff"
            android:textColorHint="#66ffffff" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/denglu_et_round"
            android:hint="@string/denglu_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:text="cf19910918"
            android:textColor="#fff"
            android:textColorHint="#66ffffff" />

        <Button
            android:id="@+id/bt_denglu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/click_btn_blue_round"
            android:text="@string/denglu_button"
            android:textColor="#fff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:paddingBottom="10dp"
                android:text="@string/forget_pwd"
                android:textColor="@color/denglu_tv" />

            <TextView
                android:id="@+id/tv_zhuce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="right"
                android:paddingBottom="10dp"
                android:text="@string/denglu_zhuce"
                android:textColor="@color/denglu_tv" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
