<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="45dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/shouye_taocanhuang"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/zhuce_et_background"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/taocan_lv_taocantv_gao" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:gravity="right"
                android:textColor="@color/zhuce_et_background"
                android:layout_weight="1"
                android:text="@string/taocan_lv_taocantv_flag" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:textSize="25dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/zheci_backgournd"
                android:text="@string/taocan_huang_taocantv_moneying" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:textColor="@color/zhuce_et_background"
                android:layout_weight="1"
                android:text="@string/oneyear" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/shouye_taocanlvtv"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/ll_buy"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:src="@drawable/planlistcontain" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/taocan_lv_hintone"
                    android:textColor="@color/zhuce_taocanivim"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:src="@drawable/planlistcontain" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/taocan_lv_hinttwo"
                    android:textColor="@color/zhuce_taocanivim"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:src="@drawable/planlistcontain" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/taocan_lv_hintthree"
                    android:textColor="@color/zhuce_taocanivim"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:src="@drawable/planlistcontain" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/taocan_lv_hintfour"
                    android:textColor="@color/zhuce_taocanivim"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:src="@drawable/planlistnotcontain" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/taocan_lv_hintfive"
                    android:textColor="@color/zhuce_taocanivim"
                    android:textSize="15dp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_alipay"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/shouye_taocanlvtv"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:src="@drawable/alipay" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="支付宝"
                    android:textColor="@color/zhuce_taocanivim"
                    android:textSize="15dp" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="12dp"
                    android:src="@drawable/more" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_buy"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/click_btn_yellow_round"
            android:text="@string/taocan_lv_buy"
            android:textColor="#fff" />


    </LinearLayout>

</LinearLayout>
