<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    app:cardUseCompatPadding="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/shouye_taocanlv"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_level"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/taocan_lv_taocantv_chu"
                android:textColor="@color/zhuce_et_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/taocan_lv_taocantv_flag"
                    android:textColor="@color/zhuce_et_background" />

                <TextView
                    android:id="@+id/tv_money"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/taocan_lv_taocantv_money"
                    android:textColor="@color/zheci_backgournd"
                    android:textSize="28dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:id="@+id/tv_days"
                    tools:text="@string/taocan_lv_taocantv_day"
                    android:textColor="@color/zhuce_et_background" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/shouye_taocanlvtv"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/ll_buy"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:id="@+id/iv_1"
                        android:src="@drawable/planlistcontain" />

                    <TextView
                        android:id="@+id/tv_desc1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/taocan_lv_hintone"
                        android:textColor="@color/zhuce_taocanivim"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:id="@+id/iv_2"
                        android:src="@drawable/planlistcontain" />

                    <TextView
                        android:id="@+id/tv_desc2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/taocan_lv_hinttwo"
                        android:textColor="@color/zhuce_taocanivim"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:id="@+id/iv_3"
                        android:src="@drawable/planlistcontain" />

                    <TextView
                        android:id="@+id/tv_desc3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/taocan_lv_hintthree"
                        android:textColor="@color/zhuce_taocanivim"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:id="@+id/iv_4"
                        android:src="@drawable/planlistcontain" />

                    <TextView
                        android:id="@+id/tv_desc4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/taocan_lv_hintfour"
                        android:textColor="@color/zhuce_taocanivim"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:id="@+id/iv_5"
                        android:src="@drawable/planlistnotcontain" />

                    <TextView
                        android:id="@+id/tv_desc5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/taocan_lv_hintfive"
                        android:textColor="@color/zhuce_taocanivim"
                        android:textSize="15dp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_alipay"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/shouye_taocanlvtv"
                android:orientation="vertical"
                android:padding="20dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:id="@+id/ll_alipay2"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:src="@drawable/alipay" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="支付宝"
                        android:textColor="@color/zhuce_taocanivim"
                        android:textSize="15dp" />

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="12dp"
                        android:src="@drawable/more" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_buy"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/click_btn_green_round"
                android:text="@string/taocan_lv_buy"
                android:textColor="#fff" />


        </LinearLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>
